--- a/styles/conponents/_header.scss
+++ b/styles/conponents/_header.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
     align-items: center;
     
-    background: var(--color1);
+    background: #043873;
     &__logo{
         width: 191px;
         height: 34px;
