--- a/styles/conponents/_content.scss
+++ b/styles/conponents/_content.scss
@@ -1,17 +1,23 @@
 .content{
+    text-align: left;
+    width: auto;
+    display: block;
+    overflow: hidden;
+
     letter-spacing: -0.02em;
-
-    text-align: center;
-
     &__title{
         position: relative;
         font-weight: 700;
-        font-size: 54px;
-        line-height: 65px;
+        font-size: 64px;
+        line-height: 77px;
         background-size: cover;
         span{
             position: relative;
             z-index: 1;
+            span{
+                position: relative;
+                z-index: 1;
+            }
         }
     }
     &__para{
@@ -26,12 +32,42 @@
         position: absolute;
         z-index: 1;
     }
+    button{
+        margin: 0 auto;
+        @media screen and (min-width: 1000px) {
+            margin: 0;
+        }
+    }
+    @media screen and (max-width: 1000px){
+        text-align: center;
+        &__title{
+            font-weight: 700;
+            font-size: 54px;
+            line-height: 65px;
+        }
+    }
+
+    @media screen and (max-width: 750px) {
+        &__title{
+            font-weight: 700;
+            font-size: 46px;
+            line-height: 54px;
+        }
+    }
+    @media screen and (max-width: 500px) {
+        &__title{
+            font-weight: 700;
+            font-size: 36px;
+            line-height: 44px;
+        }
+    }
 }
 .picture{
     &__1{
+        display: block;
         width: 551px;
         height: 367px;
-        margin: 100px auto 0;
+        margin: auto;
 
         background-color: #C4DEFD;
     }
