--- a/styles/conponents/_footer.scss
+++ b/styles/conponents/_footer.scss
@@ -1,13 +1,21 @@
 .footer{
-    padding: 80px 32px 32px;
+    //padding: 80px 32px 32px;
+    min-width: 320px;
     
-    background-color: #043873;
-    color: #fff;
+    background-color: var(--bg);
+    color: var(--w);
     &__info{
+        margin: 80px 32px 0;
+        
+        display: flex;
+        gap: 100px;
+        justify-content: space-between;
         &--tab-1{
-            img{
-                width: 351.68px;
-                height: 62px;
+            width: 210px;
+            flex-shrink: 0;
+            #logo{
+                position: relative;
+                width: 191px;
             }
             p{
                 padding-top: 24px;
@@ -20,14 +28,16 @@
             }
         }
         &--tab-2, &--tab-3, &--tab-4{
-            margin-top: 100px;
+            width: 205.25px;
             b{
                 font-weight: 700;
                 font-size: 18px;
                 line-height: 22px;
-                /* identical to box height */
                 
                 letter-spacing: -0.02em;
+                &:hover{
+                    opacity: 0.6;
+                }
             }
             p{
                 padding-top: 15px;
@@ -37,19 +47,22 @@
                 /* identical to box height, or 167% */
                 
                 letter-spacing: -0.02em;
+                &:hover{
+                    opacity: 0.6;
+                }
             }
         }
         &--tab-5{
-            width: 201px;
-            margin-top: 100px;
+            width: 210px;
+            flex-shrink: 0;
             b{
+                padding-bottom: 23px;
                 display: block;
                 font-weight: 700;
                 font-size: 28px;
                 line-height: 36px;
                 /* identical to box height, or 129% */
                 
-                text-align: center;
                 letter-spacing: -0.02em;
             }
             p{
@@ -60,19 +73,54 @@
                 
                 letter-spacing: -0.02em;
             }
+            .btn{
+                margin: 32px 0 0;
+            }
         }
-
+        @media screen and (max-width: 1100px) {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            #logo{
+                width: 351.68px;
+                max-width: 100vw;
+            }
+        }
+        @media screen and (max-width: 600px) {
+            align-items: center;
+            &--tab-1, &--tab-2, &--tab-3, &--tab-4, &--tab-5{
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                #logo{
+                    left: -70px;
+                }
+            }
+        }
+        @media screen and (max-width: 400px) {
+            #logo{
+                left: auto;
+                width: 191px;
+            }
+        }
     }
     &__btm{
-        margin-top: 100px;
+        margin: 70px 32px 32px;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        padding-top: 30px;
+        border-top: 1px solid var(--w);
+
         &--nav{
             display: flex;
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
-            padding-bottom: 20px;
+            gap: 60px;
 
-            border-bottom: 1px solid #2E4E73;
             button{
                 border: none;
                 background: none;
@@ -80,11 +128,10 @@
                 font-weight: 400;
                 font-size: 16px;
                 line-height: 20px;
-                /* identical to box height, or 125% */
                 
                 letter-spacing: -0.02em;
 
-                color: #fff;
+                color: var(--w);
                 img{
                     &:first-child{
                         width: 19px;
@@ -102,7 +149,42 @@
             }
         }
         &--icons{
-            margin-top: 20px;
+            //margin-top: 20px;
+            
+        }
+        @media screen and (max-width: 1000px) {
+            flex-direction: column; 
+            align-items: flex-start;
+
+            &--nav{
+                width: calc(100vw - 64px);
+                padding-bottom: 20px;
+                border-bottom: 1px solid var(--w);
+                gap: 0;
+            }
+            &--icons{
+                padding-top: 20px;
+            }
+            border-top: none;
+        }
+
+        @media screen and (max-width: 600px) {
+            &--nav{
+                width: calc(100vw - 64px);
+                flex-direction: column;
+                gap: 20px;
+            }
+            &--icons{
+                margin: 0 auto;
+            }
+        }
+    }
+    @media screen and (min-width: 1544px) {
+        &__info{
+            margin: 80px calc(50vw - 740px) 0;
+        }
+        &__btm{
+            margin: 70px calc(50vw - 740px) 32px;
         }
     }
 }
